working through typing of contour-mask conversion

--- a/prototyping/masking-round-trip.ipynb
+++ b/prototyping/masking-round-trip.ipynb
@@ -52,16 +52,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be54d888-a619-4ce5-b5dc-4758c16068da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# skimage.measure.find_contours?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "53dcbdad-820b-4b7d-9f5a-01402f52ac7e",
    "metadata": {},
    "outputs": [],
@@ -84,11 +74,11 @@
    "source": [
     "def mask_to_contours(x_grid, y_grid, mask):\n",
     "    padded_mask = np.pad(mask, 1)\n",
-    "    contours_coords_padded_image_frame = skimage.measure.find_contours(mask, level=127.5)\n",
-    "    contours_coords_image_frame = contours_coords_padded_image_frame - 1\n",
+    "    contours_coords_padded_image_frame = skimage.measure.find_contours(padded_mask, level=127.5)\n",
+    "    contours_coords_image_frame = [item -1 for item in contours_coords_padded_image_frame]\n",
     "    \n",
-    "    x0, dx, _ = grid_to_transform(x_grid)\n",
-    "    y0, dy, _ = grid_to_transform(y_grid)\n",
+    "    x0, dx = grid_to_transform(x_grid)\n",
+    "    y0, dy = grid_to_transform(y_grid)\n",
     "\n",
     "    contours = []\n",
     "    for yx_coords in contours_coords_image_frame:\n",
@@ -140,7 +130,9 @@
    "source": [
     "def contours_to_mask(x_grid, y_grid, contours, expansion=16):\n",
     "    expanded_mask = _contours_to_expanded_mask(x_grid, y_grid, contours, expansion)\n",
-    "    mask = skimage.measure.block_reduce(expanded_mask, block_size=(expansion, expansion), func=np.mean)\n",
+    "    float_mask = skimage.measure.block_reduce(expanded_mask, block_size=(expansion, expansion), func=np.mean)\n",
+    "    \n",
+    "    mask = np.round(float_mask * 255).astype(np.uint8)\n",
     "    \n",
     "    return mask"
    ]
@@ -190,12 +182,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9df2edd0-903a-4ec5-a185-d020008a5406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "round_trip_contours = mask_to_contours(x_grid, y_grid, mask)\n",
+    "rount_trip_y = round_trip_contours[0][:, 0]\n",
+    "rount_trip_x = round_trip_contours[0][:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "240cb44a-d2cb-4e52-a064-832c65dfb9bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.pcolormesh(x_grid, y_grid, mask, shading=\"nearest\")\n",
     "plt.plot(x, y)\n",
+    "plt.plot(rount_trip_x, rount_trip_y)\n",
+    "\n",
     "plt.axis('equal')"
    ]
   },
@@ -222,168 +228,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dec7688f-b79a-4d78-ba93-ecc0f804a21d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "two_circles = unit_circle.union(shapely.affinity.translate(unit_circle, 10))\n",
-    "type(two_circles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc289c12-9334-46a2-9cb8-2f01201c0c13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "two_circles.geoms[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "526118d2-86c1-4d39-b86a-99b4a6a273f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unit_circle.geoms[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77c6a9e2-cb3d-4e3c-bf3a-81d734635c2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93738b1c-c0dc-4aff-b901-29ad3397d980",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74acf2d8-2965-456e-a586-2117267217b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccceaed0-7130-48c4-acc9-d53a21d8a35c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59e23bd9-8880-4bf8-878c-1e3b7498dec6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.pad?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9df132c1-3778-4e97-9640-2305edeeae36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "255 / 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "669bb9b6-6a2b-41ca-b9b4-dd2679f94cb7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "592cafe7-1d85-4427-8de1-77726801c9ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def contours_to_expanded_mask(x_grid, y_grid, contours):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba108c58-9947-462c-86d1-57f8e067e46c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d143b54-0345-4986-a181-e6d41b6ccf80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce75a48a-9421-477b-96f1-b04c9e3e4478",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_grid.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d3108f0-a703-48aa-98ef-53e4e5b234dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def transform_parameters_to_grid(spacing, start, direction, size):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad5e0247-fbe2-420b-98f6-863561d65109",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def contours_to_mask():\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c45def1-e979-4d78-9747-a2d8d2e937d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "skimage.draw.polygon2mask?"
-   ]
   }
  ],
  "metadata": {
