--- a/prototyping/masking-round-trip.ipynb
+++ b/prototyping/masking-round-trip.ipynb
@@ -29,7 +29,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b685d62-5c08-45c8-be2f-e4c16382c19c",
+   "id": "58b81553-d2c5-491f-8d87-842ad46bdf6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from radiotherapyai.mask.convert import mask_to_contours, contours_to_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c397d1-123b-43be-8e5e-30fc5af6100b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c524f37f-4fec-4948-bbb0-6209617f5806",
+   "id": "4c6a9310-41b5-4f2d-aeed-6f33304c1eea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,100 +62,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53dcbdad-820b-4b7d-9f5a-01402f52ac7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def grid_to_transform(grid):\n",
-    "    x0 = grid[0]\n",
-    "    all_dx = np.diff(grid)\n",
-    "    dx = all_dx[0]\n",
-    "    assert np.allclose(dx, all_dx)\n",
-    "    \n",
-    "    return x0, dx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ee31259-2248-4b12-93ef-33912293b515",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mask_to_contours(x_grid, y_grid, mask):\n",
-    "    padded_mask = np.pad(mask, 1)\n",
-    "    contours_coords_padded_image_frame = skimage.measure.find_contours(padded_mask, level=127.5)\n",
-    "    contours_coords_image_frame = [item -1 for item in contours_coords_padded_image_frame]\n",
-    "    \n",
-    "    x0, dx = grid_to_transform(x_grid)\n",
-    "    y0, dy = grid_to_transform(y_grid)\n",
-    "\n",
-    "    contours = []\n",
-    "    for yx_coords in contours_coords_image_frame:\n",
-    "        yx_coords[:, 1] = yx_coords[:, 1] * dx + x0\n",
-    "        yx_coords[:, 0] = yx_coords[:, 0] * dy + y0\n",
-    "        \n",
-    "        contours.append(yx_coords)\n",
-    "        \n",
-    "    return contours"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a11c748-f6e2-44cc-8f28-8b8c33badbc8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _contours_to_expanded_mask(x_grid, y_grid, contours, expansion):\n",
-    "    mask_size = (len(y_grid), len(x_grid))\n",
-    "    expanded_mask_size = np.array(mask_size) * expansion\n",
-    "    \n",
-    "    x0, dx = grid_to_transform(x_grid)\n",
-    "    y0, dy = grid_to_transform(y_grid)\n",
-    "    \n",
-    "    expanded_mask = np.zeros(expanded_mask_size)\n",
-    "    \n",
-    "    for yx_coords in contours:\n",
-    "        y = yx_coords[:, 0]\n",
-    "        x = yx_coords[:, 1]\n",
-    "        \n",
-    "        i = ((y - y0) / dy) * expansion + (expansion - 1) * 0.5\n",
-    "        j = ((x - x0) / dx) * expansion + (expansion - 1) * 0.5\n",
-    "        \n",
-    "        expanded_mask = np.logical_or(\n",
-    "            expanded_mask,\n",
-    "            skimage.draw.polygon2mask(expanded_mask_size, np.array(list(zip(i, j)))),\n",
-    "        )\n",
-    "        \n",
-    "    return expanded_mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91c2485c-2675-4a97-a414-48c3ef678e26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def contours_to_mask(x_grid, y_grid, contours, expansion=16):\n",
-    "    expanded_mask = _contours_to_expanded_mask(x_grid, y_grid, contours, expansion)\n",
-    "    float_mask = skimage.measure.block_reduce(expanded_mask, block_size=(expansion, expansion), func=np.mean)\n",
-    "    \n",
-    "    mask = np.round(float_mask * 255).astype(np.uint8)\n",
-    "    \n",
-    "    return mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2c1dc195-12c7-4ebf-9057-c5a775aef82e",
    "metadata": {},
    "outputs": [],
    "source": [
     "yx_coords = np.concatenate([y[:, None], x[:, None]], axis=-1)\n",
-    "yx_coords.shape"
+    "contours = [yx_coords]"
    ]
   },
   {
@@ -154,9 +76,7 @@
    "id": "22d9499c-b7a4-4944-926f-f0909559236c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "contours = [yx_coords]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
