add a from_contours dice metric

--- a/prototyping/masking-round-trip.ipynb
+++ b/prototyping/masking-round-trip.ipynb
@@ -131,6 +131,16 @@
    "id": "7d35cad4-684c-470e-81e4-6a448ef8df3a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "shapely.geometry.Polygon(zip(yx_coords[:, 1], yx_coords[:, 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4800ba63-603e-4f9e-b88f-71ae3eef360f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -139,7 +149,10 @@
    "id": "3a6a0aca-c073-4e80-9736-0d89bec49ff1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xy_coords = np.flip(yx_coords, axis=1)\n",
+    "shapely.geometry.Polygon(xy_coords)"
+   ]
   },
   {
    "cell_type": "code",
