add keyhole note

--- a/prototyping/masking-round-trip.ipynb
+++ b/prototyping/masking-round-trip.ipynb
@@ -160,6 +160,66 @@
    "id": "f4d1612c-f0ee-4c77-8bde-1700f13c3ce6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "mask = np.array(\n",
+    "    [\n",
+    "        [255, 255, 127, 0],\n",
+    "        [255, 255, 127, 0],\n",
+    "        [127, 127, 64, 0],\n",
+    "        [0, 0, 0, 0],\n",
+    "    ],\n",
+    "    dtype=np.uint8,\n",
+    ")\n",
+    "\n",
+    "y_grid = np.array([10, 12, 14, 16])\n",
+    "x_grid = np.array([0, 1, 2, 3])\n",
+    "\n",
+    "approximate_expected_contour = np.array([(9, -0.5), (9, 2), (14, 2), (14, -0.5)])\n",
+    "expected_contours = [approximate_expected_contour]\n",
+    "\n",
+    "contours = mask_to_contours(x_grid, y_grid, mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5efc2540-e9ed-4bac-be21-319f3c61c5e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.pcolormesh(x_grid, y_grid, mask, shading=\"nearest\")\n",
+    "plt.plot(expected_contours[0][:, 1], expected_contours[0][:, 0])\n",
+    "plt.plot(contours[0][:, 1], contours[0][:, 0])\n",
+    "\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6fab86b-efc9-4b47-9a66-fc33db2ab7a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx = x_grid[1] - x_grid[0]\n",
+    "dy = y_grid[1] - y_grid[0]\n",
+    "\n",
+    "x_grid_pad = np.concatenate([[x_grid[0] - dx], x_grid, [x_grid[-1] + dx]])\n",
+    "y_grid_pad = np.concatenate([[y_grid[0] - dy], y_grid, [y_grid[-1] + dy]])\n",
+    "\n",
+    "mask_pad = np.pad(mask, 1)\n",
+    "\n",
+    "plt.pcolormesh(x_grid, y_grid, mask, shading=\"nearest\")\n",
+    "plt.contour(x_grid_pad, y_grid_pad, mask_pad/255, levels=[0.5])\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51cf809-6e9e-4815-aa22-2c66b9bf4b10",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
