--- a/workshops/epsm-2022-ai-workshop.ipynb
+++ b/workshops/epsm-2022-ai-workshop.ipynb
@@ -57,24 +57,9 @@
     "## Overview\n",
     "\n",
     "* Investigate what is possible\n",
-    "* Creating a data pipeline\n",
-    "* Displaying the data\n",
-    "* Building a UNet\n",
-    "* Set up data display to work during training\n",
+    "* Data pipeline\n",
+    "* The pieces of a UNet\n",
     "* Training the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99ff2eeb-3bbd-4417-8417-d981d91e8e08",
-   "metadata": {
-    "id": "99ff2eeb-3bbd-4417-8417-d981d91e8e08"
-   },
-   "outputs": [],
-   "source": [
-    "# First things first, describe the Google Colab interface\n",
-    "# Make sure everyone can run a hello world."
    ]
   },
   {
@@ -104,30 +89,6 @@
    "source": [
     "# TODO: Show the rai model in action"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb907458-1ede-46dd-a316-a22e87dbdb8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf373ebd-6a3a-4815-995d-c16f3d5765b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cac1c62e-59ae-481c-932f-9c7460ccc921",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -485,9 +446,37 @@
    },
    "outputs": [],
    "source": [
-    "batch_validation_images, batch_validation_masks = iter(\n",
-    "    datasets[\"validation\"].take(1)\n",
-    ").next()"
+    "iterator = iter(datasets[\"validation\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "848b0285-607e-4710-8e4e-6ed04ec0d81e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_validation_images, batch_validation_masks = next(iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e015e902-450c-412e-8e1c-b7060c1074ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_validation_images.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46616399-3284-4d11-8f30-5b1e698acf29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_validation_masks.shape"
    ]
   },
   {
@@ -666,7 +655,7 @@
     "id": "5bc0b6b0-bd49-4009-8b02-cd9544ece837"
    },
    "source": [
-    "## Building the 2D U-Net model\n",
+    "## UNet Diagram\n",
     "\n",
     "In this section we will create a Tensorflow Keras 2D UNet model utilising a set of pre-built functions. An example UNet diagram is given below for aiding explanation:\n",
     "\n",
@@ -678,7 +667,7 @@
    "id": "62d76113-47a2-4417-9062-1f7e7deefc1f",
    "metadata": {},
    "source": [
-    "### Activation"
+    "## Activation"
    ]
   },
   {
@@ -730,10 +719,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2bf540c6-9b0d-4e77-9468-5950f928842e",
+   "metadata": {},
+   "source": [
+    "\"A large number of linear combinations of linear equations, can be reduced to a single linear equation\".\n",
+    "\n",
+    "RELU \"breaks\" the linearity. And enables \"deep\" learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8891dfcd-b1a3-4b33-aaa0-20bb0a68bcd3",
    "metadata": {},
    "source": [
-    "### Convolution (or... cross-correlation...)"
+    "## Convolution"
    ]
   },
   {
@@ -747,7 +746,7 @@
     "    plt.imshow(array, vmin=vmin, vmax=vmax)\n",
     "\n",
     "    for (j,i), label in np.ndenumerate(array):\n",
-    "        plt.text(i, j, np.round(label, decimals=4), ha='center', va='center')\n",
+    "        plt.text(i, j, np.round(label, decimals=2), ha='center', va='center')\n",
     "        \n",
     "    plt.colorbar()"
    ]
@@ -764,22 +763,6 @@
     "\n",
     "array_image(x[0, :, :, 0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f45424e4-d48e-46fd-9be4-8bccf63974ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37c79044-570f-4afb-9101-df0eae5fce9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -803,8 +786,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "y = example_convolution(x)"
    ]
   },
@@ -833,14 +814,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbfc76ec-7a97-45c6-8341-0c8b971d5cc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b333e708-1aef-4ef5-aba6-416206c4560f",
    "metadata": {},
    "outputs": [],
@@ -852,57 +825,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cac94f46-c0fb-4039-a72d-cf6c5355fafb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b10030e2-6748-488c-ad43-0ebc28a47f4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1640f194-cd99-4a1c-9053-ab10a8ed5811",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc95f163-d243-4ace-969e-5e847326aff3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(x[0,...,0], vmin=vmin, vmax=vmax)\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bf54b22-4f15-4722-8b73-4f2b49a97744",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = convolution(x, number_of_filters=1).numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a9501574-d879-45af-bb98-1763a8f871d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(y[0,...,0], vmin=vmin, vmax=vmax)\n",
-    "plt.colorbar()"
+    "array_image(y[0,...,0])"
    ]
   },
   {
@@ -912,26 +839,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = convolution(y, number_of_filters=1).numpy()\n",
-    "plt.imshow(z[0,...,0], vmin=vmin, vmax=vmax)\n",
-    "plt.colorbar()"
+    "z = example_convolution(y).numpy()\n",
+    "array_image(z[0,...,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c371685d-d248-410c-b15d-a2c4845c88a0",
+   "metadata": {},
+   "source": [
+    "## Pooling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "826c09fb-d69a-4d69-a525-e121a19d9623",
+   "id": "6de17731-3fd3-4191-a668-9aa089c62373",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "example_max_pool = tf.keras.layers.MaxPool2D()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75b57e87-35b4-4ce6-955e-404494647e0b",
+   "id": "1a1a4ba1-23b9-45b2-93b0-3e6bf25c9457",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59e4e297-0179-477b-9c9b-b0a18d0e8c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pooled_z = example_max_pool(z).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa365492-f12c-4a5b-bbb6-732603e5744d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pooled_z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e3e3efc-b9ea-4c01-a5fb-04818f7c7fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_image(z[0,...,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92e3056c-3830-4e42-92ef-6f1d8370057a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_image(pooled_z[0,...,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f09298d-6010-4765-aa8f-52f568164f08",
+   "metadata": {},
+   "source": [
+    "## Convolutional Transpose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b717272e-ef48-4861-ba81-343e547be67b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_convolution_transpose = tf.keras.layers.Conv2DTranspose(\n",
+    "    filters=1,\n",
+    "    kernel_size=3,\n",
+    "    strides=2,\n",
+    "    padding=\"same\",\n",
+    "    kernel_initializer=\"he_normal\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab1a0100-c54b-4175-b0bd-2c3871392c26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f856719a-ae49-4c46-a05b-f430fb174f90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_image(x[0, ..., 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da74331f-b93f-4f02-8de1-a0e741a831dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = example_convolution_transpose(x).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ec08212-8ab3-48d8-81ff-e22d76e4d024",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b849ae9-7f49-4348-ace5-9796299f363f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel = example_convolution_transpose.weights[0][..., 0, 0]\n",
+    "array_image(kernel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3630a022-5deb-43c8-90dc-03a50f865a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 8))\n",
+    "array_image(y[0, ..., 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68410885-0c26-4335-9b27-73e4c9737011",
+   "metadata": {},
+   "source": [
+    "## Putting it all together"
+   ]
   },
   {
    "cell_type": "code",
@@ -966,18 +1038,6 @@
     "    )(x)\n",
     "\n",
     "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d16a564-6c12-4a39-a6eb-0ff0405d0f96",
-   "metadata": {
-    "id": "9d16a564-6c12-4a39-a6eb-0ff0405d0f96"
-   },
-   "outputs": [],
-   "source": [
-    "# Highlight where the activation, convolution, and conv_transpose occurs in the UNet diagram"
    ]
   },
   {
@@ -1028,18 +1088,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65f54b92-354e-4b3a-92c6-9bd5c8a28c4c",
-   "metadata": {
-    "id": "65f54b92-354e-4b3a-92c6-9bd5c8a28c4c"
-   },
-   "outputs": [],
-   "source": [
-    "# Highlight the encode and decode sections of the UNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "25324da3-1f3d-4f2a-8611-42ac62c7ef25",
    "metadata": {
     "id": "25324da3-1f3d-4f2a-8611-42ac62c7ef25"
@@ -1060,18 +1108,6 @@
     "        encoding_filter_counts,\n",
     "        decoding_filter_counts,\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a7cdad4-846f-4b90-bde9-8a54eeb2b101",
-   "metadata": {
-    "id": "3a7cdad4-846f-4b90-bde9-8a54eeb2b101"
-   },
-   "outputs": [],
-   "source": [
-    "# Show the effect of a range of different grid_sizes"
    ]
   },
   {
@@ -1139,6 +1175,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37308635-7097-4144-b271-8b9c8e0efcb5",
+   "metadata": {},
+   "source": [
+    "## Model loss (binary cross entropy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5d527fc-16a6-4ff5-8687-e78bdfd464bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt = np.zeros(shape=(1,7,7,1))\n",
+    "gt[0,1:3,4:6,0] = 1\n",
+    "\n",
+    "array_image(gt[0, ..., 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acf58838-99f9-4b93-8283-a86e23b58ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd = np.copy(gt)\n",
+    "pd[0,2,4,0] = 0.95\n",
+    "pd[0,1,5,0] = 0\n",
+    "pd[0,5,1,0] = 0.2\n",
+    "pd[0,3,1,0] = 0.5\n",
+    "pd[0,1,1,0] = 1\n",
+    "\n",
+    "array_image(pd[0, ..., 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3d60d10-1ad5-480e-99ea-8a9e8cde00ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bce = -(gt * np.log(pd) + (1 - gt) * np.log(1 - pd))\n",
+    "array_image(bce[0, ..., 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8316136f-666f-44ac-87ee-8132e89ed472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epsilon = 0.000001\n",
+    "\n",
+    "bce = -(gt * np.log(pd + epsilon) + (1 - gt) * np.log(1 - pd + epsilon))\n",
+    "array_image(bce[0, ..., 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d716cd14-16d8-42ba-a4f7-84c70b452fab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = np.sum(bce)\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "992f95e5-26be-4d8a-8afa-1e3ca19db2cd",
+   "metadata": {},
+   "source": [
+    "## The model prior to training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "529c6094",
@@ -1161,25 +1278,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae86d2cf-6591-4159-8eca-956fa428cc6b",
-   "metadata": {
-    "id": "ae86d2cf-6591-4159-8eca-956fa428cc6b"
-   },
+   "id": "3cba3654-06ee-4fdf-9ca4-a76e06482ba3",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Utilise the untrained model to create a prediction"
+    "image.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3547689-a74c-4c17-ba0f-87f2067032c4",
-   "metadata": {
-    "id": "d3547689-a74c-4c17-ba0f-87f2067032c4"
-   },
+   "id": "1765db8b-ffdd-4f6f-ae22-a4f8084bdd92",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the previously defined plot_contour to show this prediction"
+    "pred_masks = model.predict(image[None, ...])[0, ...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c836ea-da0e-4a9f-b6da-6a57f9751dc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd5ef215-2be5-4355-8a40-8c9209dd5f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "167e3399-91f9-4035-b5de-557850753c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(12, 6), ncols=2)\n",
+    "plot_contours(ax[0], image, masks)\n",
+    "plot_contours(ax[1], image, pred_masks)"
    ]
   },
   {
@@ -1195,18 +1340,6 @@
     "    fig, ax = plt.subplots(figsize=(12, 6), ncols=2)\n",
     "    plot_contours(ax[0], image, masks)\n",
     "    plot_contours(ax[1], image, pred_masks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3acd3766-ae77-44f8-91fd-1971fe06bc27",
-   "metadata": {
-    "id": "3acd3766-ae77-44f8-91fd-1971fe06bc27"
-   },
-   "outputs": [],
-   "source": [
-    "# Use this new function, plot_with_prediction, to see a comparison"
    ]
   },
   {
@@ -1233,25 +1366,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0234e5f1-993f-4d9a-9505-d091c9512a44",
-   "metadata": {
-    "id": "0234e5f1-993f-4d9a-9505-d091c9512a44"
-   },
+   "id": "f9d32143-d88a-4afc-9a94-e450960ef082",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Describe classes\n",
-    "# Instantiate this callback class and\n",
-    "# call the on_epoch_end method to see what it does"
+    "callback = DisplayCallback()\n",
+    "callback.on_epoch_end(10000)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e482d6b8-81b0-4b26-8f38-43a75bbfc199",
-   "metadata": {
-    "id": "e482d6b8-81b0-4b26-8f38-43a75bbfc199"
-   },
+   "id": "ae4c61a0-8800-4cb8-a26d-f2a6627b6009",
+   "metadata": {},
    "source": [
-    "## Training"
+    "## Training the model"
    ]
   },
   {
@@ -1285,24 +1413,8 @@
     "    datasets[\"training\"],\n",
     "    epochs=50,\n",
     "    validation_data=datasets[\"validation\"],\n",
-    "    callbacks=[DisplayCallback()],\n",
+    "    callbacks=[callback],\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b855ca3-7347-48ff-8110-b04eb075daa2",
-   "metadata": {
-    "id": "8b855ca3-7347-48ff-8110-b04eb075daa2"
-   },
-   "outputs": [],
-   "source": [
-    "# Compare the training results. Sometimes it won't converge.\n",
-    "# Can re-initialise the model and re-train in that case.\n",
-    "\n",
-    "## BREAKOUT ROOMS ##\n",
-    "# -- Goal: Catch everyone up, and have everyone be able to train a UNet"
    ]
   },
   {
@@ -1326,14 +1438,6 @@
     ")\n",
     "plt.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "633eca35-01e8-4e27-8e9d-c3d6553863c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
