example working with eye and optic nerves

--- a/prototyping/loading-model.ipynb
+++ b/prototyping/loading-model.ipynb
@@ -10,8 +10,12 @@
     "import urllib.request\n",
     "import pathlib\n",
     "import shutil\n",
+    "import collections\n",
     "\n",
-    "import pydicom"
+    "import numpy as np\n",
+    "import pydicom\n",
+    "import matplotlib.pyplot as plt\n",
+    "import skimage.measure"
    ]
   },
   {
@@ -32,7 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rai.model import load"
+    "from rai.model import load\n",
+    "from rai.data.images import paths_to_reduced_image_stack\n",
+    "from raicontours import cfg"
    ]
   },
   {
@@ -52,12 +58,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # TODO: This can be downloaded in parallel.\n",
+    "# # # TODO: This can be downloaded in parallel.\n",
     "\n",
-    "# data_path = pathlib.Path('data')\n",
+    "data_path = pathlib.Path('data')\n",
     "# data_path.mkdir(exist_ok=True)\n",
     "\n",
-    "# data_root = 'https://github.com/RadiotherapyAI/data-tcia-deepmind/tree/61fd2525f9880c8b201758f43c773e515572be92/0522c0659'\n",
+    "# data_root = 'https://github.com/RadiotherapyAI/data-tcia-deepmind/raw/61fd2525f9880c8b201758f43c773e515572be92/0522c0659'\n",
     "\n",
     "# filenames = [f\"CT-{item:03d}.dcm\" for item in range(165)] + [\"RS.dcm\"]\n",
     "\n",
@@ -81,15 +87,191 @@
    "id": "b88fefb7-42e0-419d-b631-1568fab422c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# image_stack = paths_to_image_stack(image_paths)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a171276-09f1-45b6-8dbc-2a39e32d1ee6",
+   "id": "b6dc007e-75d5-420b-884f-e554dd1d95f4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b952829c-1c97-4aa5-8081-d53dee05bef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.max(image_stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cf7ac85-6aad-4530-b070-c3f9a9065ffe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_image_stack = paths_to_reduced_image_stack(image_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74ce1d25-de12-497f-a5d6-b41550691974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3e2803e-084c-457e-a288-205d80883c09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inference_patch = reduced_image_stack[None, 0:64, 32:96, 32:96]\n",
+    "inference_patch.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b30375-0bbf-4173-b1a2-2c9626141358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_mask = model.predict(inference_patch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "440d4534-2c67-4300-ae69-e368aa4e0fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _plot_model_result(\n",
+    "    model_input, model_output\n",
+    "):\n",
+    "    contours_by_slice = _get_contours_by_slice(\n",
+    "        images=model_input,\n",
+    "        predictions=model_output,\n",
+    "    )\n",
+    "\n",
+    "    x = list(range(model_input.shape[1]))\n",
+    "    vmin = 0.2\n",
+    "    vmax = 0.4\n",
+    "\n",
+    "    ylim = [-np.inf, np.inf]\n",
+    "    xlim = [np.inf, -np.inf]\n",
+    "\n",
+    "    axs = []\n",
+    "\n",
+    "    for z_index, contours_by_name in contours_by_slice.items():\n",
+    "        fig, ax = plt.subplots()\n",
+    "        axs.append(ax)\n",
+    "\n",
+    "        ax.pcolormesh(\n",
+    "            x,\n",
+    "            x,\n",
+    "            model_input[z_index, :, :],\n",
+    "            vmin=vmin,\n",
+    "            vmax=vmax,\n",
+    "            shading=\"nearest\",\n",
+    "            cmap=\"gray\",\n",
+    "        )\n",
+    "\n",
+    "        for structure_name, contours in contours_by_name.items():\n",
+    "            for contour in contours:\n",
+    "                ax.plot(\n",
+    "                    contour[:, 1],\n",
+    "                    contour[:, 0],\n",
+    "                    label=structure_name.value,\n",
+    "                )\n",
+    "\n",
+    "                xlim[1] = np.max([np.max(contour[:, 1]), xlim[1]])\n",
+    "                xlim[0] = np.min([np.min(contour[:, 1]), xlim[0]])\n",
+    "                ylim[0] = np.max([np.max(contour[:, 0]), ylim[0]])\n",
+    "                ylim[1] = np.min([np.min(contour[:, 0]), ylim[1]])\n",
+    "\n",
+    "        ax.set_aspect(\"equal\", \"box\")\n",
+    "\n",
+    "        plt.legend(bbox_to_anchor=(1.04, 1), loc=\"upper left\")\n",
+    "\n",
+    "    x_range = xlim[1] - xlim[0]\n",
+    "    y_range = ylim[0] - ylim[1]\n",
+    "\n",
+    "    margin = 0.2\n",
+    "\n",
+    "    xlim[0] -= x_range * margin\n",
+    "    xlim[1] += x_range * margin\n",
+    "\n",
+    "    ylim[1] -= y_range * margin\n",
+    "    ylim[0] += y_range * margin\n",
+    "\n",
+    "    for ax in axs:\n",
+    "        ax.set_ylim(ylim)\n",
+    "        ax.set_xlim(xlim)\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b911ffad-58f9-4bba-9eb2-b483b34114fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _get_contours_by_slice(\n",
+    "    images, predictions\n",
+    "):\n",
+    "    num_slices = images.shape[0]\n",
+    "    contours_by_slice = collections.defaultdict(dict)\n",
+    "\n",
+    "    for i in range(num_slices):\n",
+    "        for structure_name in cfg[\"structures\"]:\n",
+    "            k = cfg[\"structures\"].index(structure_name)\n",
+    "\n",
+    "            prediction_slice = predictions[i, :, :, k]\n",
+    "\n",
+    "            if np.max(prediction_slice) < 127.5:\n",
+    "                continue\n",
+    "\n",
+    "            contours = skimage.measure.find_contours(prediction_slice, level=127.5)\n",
+    "            contours_by_slice[i][structure_name] = contours\n",
+    "\n",
+    "    return contours_by_slice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae61abec-4e8d-4180-9608-23a61e843ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_plot_model_result(inference_patch[0, ...], predicted_mask[0, ...])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7adab009-30e5-48f2-bc6c-79aa83612370",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_mask.shape"
+   ]
   }
  ],
  "metadata": {
