--- a/prototyping/loading-model.ipynb
+++ b/prototyping/loading-model.ipynb
@@ -38,6 +38,8 @@
    "source": [
     "from rai.model import load\n",
     "from rai.data.images import paths_to_reduced_image_stack\n",
+    "from rai.mask.convert import mask_to_contours\n",
+    "\n",
     "from raicontours import cfg"
    ]
   },
@@ -118,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_image_stack = paths_to_reduced_image_stack(image_paths)"
+    "x_grid, y_grid, image_stack = paths_to_reduced_image_stack(image_paths)"
    ]
   },
   {
@@ -128,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_image_stack.shape"
+    "image_stack.shape"
    ]
   },
   {
@@ -138,8 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inference_patch = reduced_image_stack[None, 0:64, 32:96, 32:96]\n",
-    "inference_patch.shape"
+    "model_input = image_stack[None, 0:64, 32:96, 32:96]\n",
+    "model_input.shape"
    ]
   },
   {
@@ -149,8 +151,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted_mask = model.predict(inference_patch)"
+    "model_output = model.predict(model_input)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae074448-5b28-40a3-be2b-c29c2fef55ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg[\"structures\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca26dab6-02ac-4e20-a986-e7062f467544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours = {}\n",
+    "\n",
+    "for structure_index, structure_name in enumerate(cfg[\"structures\"]):\n",
+    "    this_structure_mask = model_output[0, ..., structure_index]\n",
+    "    \n",
+    "    contours_by_slice = []\n",
+    "    for z_index in range(64):\n",
+    "        this_slice_mask = this_structure_mask[z_index, ...]\n",
+    "        contours = mask_to_contours(x_grid, y_grid, this_slice_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5738e2b5-fb7f-4e05-8e02-9560fccabfdf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db4a822a-cd61-47d8-987b-67f17f9b1052",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaec4080-1441-41ea-9ecb-adeaaf1869ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53fe318e-a966-4359-9297-0931dd835e95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
